# rag

./: .gitignore  Makefile  README.md  activate.py  main.py  pyproject.toml  requirements.txt
.deepeval/: .deepeval_telemetry.txt
api/: routes.py  schemas.py
chunking/: semantic_chunker.py
config/: settings.py
data/: english_sales_field_data.csv  generate_mock_data.py  sales_data.csv  spanish_sales_field_data.csv  ventas_datos.csv
embeddings/: base.py  cohere_embedder.py  openai_embedder.py
evaluation/: deepeval_evaluator.py  metrics.py  ragas_evaluator.py
ingestion/: csv_ingestor.py  pdf_ingestor.py
rag/: generator.py  query_parser.py
retrieval/: retriever.py
tests/: benchmark_queries.json
vectordb/: pinecone_manager.py
