[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag"
version = "0.1.0"
description = "RAG prototype"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",

    "python-dotenv>=1.1.1,<2.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",

    "openai>=1.23.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",

    "langchain>=0.3.0,<1.0.0",
    "langchain-openai>=0.3.0,<1.0.0",
    "langchain-community>=0.3.0,<1.0.0",

    "pinecone>=4.1.0,<5.0.0",

    "pymupdf>=1.24.0,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",

    "sentence-transformers>=3.0.0,<4.0.0",
    "scikit-learn>=1.4.0,<2.0.0",

    "deepeval==4.0.0",

    "aiofiles>=23.2.0,<24.0.0",
    "python-multipart>=0.0.9,<1.0.0",

    "reportlab>=4.1.0,<5.0.0",
    "jsonschema>=4.0.0,<5.0.0"
]

[project.scripts]
rag-app = "activate:main"